<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_security_black_24dp"
            android:title="@string/menu_home" />

    </group>

    <item android:title="设置">
        <menu>

            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/menu_settings" />

            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_person_outline_black_24dp"
                android:title="@string/menu_about" />

        </menu>
    </item>

</menu>
